# meat

./: CMakeLists.txt  bg.xcf  main.cpp
include/centurion/: animation.hpp  audio.hpp  audio_events.hpp  color.hpp  common.hpp  concurrency.hpp  controller.hpp  controller_events.hpp  endian.hpp  event.hpp  event_base.hpp  filesystem.hpp  font.hpp  initialization.hpp  input.hpp  joystick.hpp  joystick_events.hpp  keyboard.hpp  locale.hpp  logging.hpp  math.hpp  memory.hpp  message_box.hpp  misc_events.hpp  mouse.hpp  mouse_events.hpp  opengl.hpp  pixels.hpp  power.hpp  render.hpp  sensor.hpp  surface.hpp  system.hpp  texture.hpp  touch.hpp  version.hpp  video.hpp  vulkan.hpp  window.hpp  window_events.hpp
include/centurion/detail/: sdl_deleter.hpp  sdl_version_at_least.hpp
